pin-depends: [
  [ "jsoo-react" "https://github.com/ml-in-barcelona/jsoo-react.git" ]
  [ "pastel" "https://github.com/reasonml/reason-native.git" ]
  [ "cli" "https://github.com/reasonml/reason-native.git" ]
  [ "file-context-printer" "https://github.com/reasonml/reason-native.git" ]
  [ "rely" "https://github.com/reasonml/reason-native.git" ]
]
