(lang dune 2.0)

(name jsoo-css-demo)

(source
 (github davesnx/jsoo-css-demo)
)

(license MIT)

(authors "davesnx")

(maintainers "davesnx")

(generate_opam_files true)

(package
 (name jsoo-css-demo)
 (synopsis "Demo to test jsoo-css")
 (description "Demo to test jsoo-css")
 (depends
  (ocaml (>= 4.08.0))
  (dune (>= 2.0))
  (alcotest :with-test)
  (odoc :with-doc)
  async_kernel
  (incr_dom (>= 0.14))
  js_of_ocaml
  ppx_jane
  ppx_deriving
 )
)
